Added SI Figures

--- a/GenerateFigures.ipynb
+++ b/GenerateFigures.ipynb
@@ -39,7 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load regrex as dict\n",
+    "# Load model solutions as dicts\n",
+    "# To run code from scratch, use cobraregrex.py\n",
     "import pandas as pd\n",
     "rs2=pd.read_csv('SI_files/ST1.csv')\n",
     "rxnid='Reaction ID'\n",
@@ -258,10 +259,14 @@
     }
    ],
    "source": [
-    "import importlib,sys\n",
-    "importlib.reload(sys.modules['analysis'])\n",
-    "from analysis import *\n",
     "fig, t1,t2=generateuniformbudget(stem_model,rsol,outdict=1,numindict=13,save_plot_to=1,names=True,lightphase=['l'],metin='NADH',altmets=['NADPH'],coloradj=-6,thresh=5e-3,percell='',filetype='svg',cells=['_CC_','_pSE_'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supplemental Figures 3 - 5"
    ]
   },
   {
@@ -269,7 +274,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "saveas=''\n",
+    "fig,metdicts2,metdicts=generateuniformbudget(stem_model,rsol,outdict=1,numindict=13,save_plot_to=1,metin='ATP',altmets=['aATP'],names=True,lightphase=['l'],outfile=saveas,coloradj=2,thresh=3e-3,percell='cellrat',filetype='svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, t1,t2=generateuniformbudget(stem_model,rsol,outdict=1,numindict=13,save_plot_to=1,names=True,lightphase=['l'],metin='PPI',altmets=['aPPI','bPPI'],coloradj=-3,thresh=3e-3,percell='cellrat',filetype='svg',diflims=['_MC_l'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, t1,t2=generateuniformbudget(stem_model,rsol,outdict=1,numindict=13,save_plot_to=1,names=True,lightphase=['l'],metin='NADH',altmets=['NADPH'],coloradj=-6,thresh=5e-3,percell='cellrat',filetype='svg',cells=['_CC_','_pSE_'])"
+   ]
   }
  ],
  "metadata": {
